@@ -121,4 +121,5 @@ AST::NodeT Scomma = AST::symbolFromStr(",");
 AST::NodeT Sfst = AST::symbolFromStr("fst");
 AST::NodeT Ssnd = AST::symbolFromStr("snd");
 AST::NodeT SpairP = AST::symbolFromStr("pair?");
+AST::NodeT Sfrom = AST::symbolFromStr("from");
 };
