@@ -317,7 +317,7 @@ static int handle_readline_crlf(int x, int key) {
 		inputNode = REPL_parse(REPL1, rl_line_buffer, strlen(rl_line_buffer), 0);
 	} catch (const Scanners::ParseException& e) {
 		/* user interface niceness: only auto-line-continue on things where we believe it can actually be made better */
-		if(strstr(e.what(), "expected <(-operands>") || strstr(e.what(), "expected ]") || strstr(e.what(), "expected <body>") || strstr(e.what(), "expected <[let") || strstr(e.what(), "expected in")) {
+		if(strstr(e.what(), "expected <(-operands>") || strstr(e.what(), "expected ]") || strstr(e.what(), "expected <body>") || strstr(e.what(), "expected <[let") || strstr(e.what(), "expected <[import") || strstr(e.what(), "expected in")) {
 			rl_insert(x, '\n');
 			return(0);
 		}
@@ -327,6 +327,9 @@ static int handle_readline_crlf(int x, int key) {
 		//rl_insert(x, '\n');
 		//return(0);
 	}
+	/* make sure we print our other stuff after the (possibly multi-line) statement */
+	rl_point = strlen(rl_line_buffer);
+	rl_redisplay();
 	rl_done = 1;
 	printf("\n");
 	return(0); /* FIXME */
@@ -475,7 +478,7 @@ int main(int argc, char* argv[]) {
 	printf("This program comes with ABSOLUTELY NO WARRANTY.\n");
 	printf("This is free software, and you are welcome to redistribute it under certain conditions. See /usr/share/doc/5d/copyright for details.\n");
 	install_SIGQUIT_handler();
-	install_SIGINT_handler();
+	//install_SIGINT_handler();
 	initialize_readline();
 	//operator_precedence_list = new Scanners::OperatorPrecedenceList();
 	while((line = readline(prompt))) {
