@@ -2,6 +2,7 @@
 
   * add "Maybe" module.
   * GTK LATEX bridge: make sure document is kept until it was actually used.
+  * add "import" macro (import [a b c d] from (requireModule "X") in ...).
 
  -- Danny Milosavljevic <danny_milo@yahoo.com>  Fri, 11 May 2012 15:08:00 +0200
 
